--- a/pages/public/public/index.wxss
+++ b/pages/public/public/index.wxss
@@ -52,6 +52,12 @@ page view, page label {
   padding-left: 40rpx;
   margin-bottom: 40rpx;
 }
+.theme_content .content_placeholder {
+  color: #999999;
+  font-size: 28rpx;
+  line-height: 44rpx;
+  height: 200rpx;
+}
 .content_input{
   border-bottom: solid 1rpx #e5e5e5;
   position: relative;
@@ -111,7 +117,9 @@ page view, page label {
   padding: 20rpx 40rpx;
   font-size: 30rpx;
   color: #999999;
-  margin-left: -40rpx
+  margin-left: -40rpx;
+  min-height: 200rpx;
+  border-bottom: solid 1rpx #e5e5e5;
 }
 .theme_rich_text textarea {
   width: 100%;
@@ -162,3 +170,64 @@ page view, page label {
 }
 
 
+
+.senior_setting .input_cell {
+  padding-left: 0;
+}
+
+.senior_setting .input_cell_row {
+  height: auto;
+}
+
+.input_cell_row .select_tag {
+  width: 100%;
+  height: auto;
+}
+
+.input_cell_row .select_tag_item {
+  float: left;
+  width: 25%;
+  padding: 0 15rpx;
+  box-sizing: border-box;
+  margin-bottom: 15rpx;
+}
+
+.input_cell_row .select_tag_item .tag {
+  height: 44rpx;
+  text-align: center;
+  border-radius: 22rpx;
+  border: solid #d5d5d5 1rpx;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input_cell_row .select_tag_item .tag .text {
+  width: 50%;
+  height: 42rpx;
+  line-height: 42rpx;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: clip;
+  color: #333;
+  font-size: 24rpx;
+}
+
+.input_cell_row .select_tag::after {
+  content: '';
+  display: block;
+  height: 0;
+  clear: both;
+}
+
+.input_cell_row .select_tag .select_tag_item .require {
+  border: none;
+  color: #fff;
+  background: #fda402;
+}
+
+.input_cell_row .select_tag .select_tag_item .require .text {
+  color: #fff;
+}
