--- a/pages/activities/activity-details/index.wxml
+++ b/pages/activities/activity-details/index.wxml
@@ -49,7 +49,9 @@
 				<view class="input_cell_icon">
 					<image src="../../../images/activities/icon_clock.png"></image>
 				</view>
-				{{info.endTimeStr === '1970-01-01 08:00' ? info.beginTimeStr + '开始' : info.beginTimeStr + '至' + info.endTimeStr}}
+				<block wx:if="{{info.endTimeStr}}">
+					{{info.endTimeStr === '1970-01-01 08:00' ? info.beginTimeStr + '开始' : info.beginTimeStr + '至' + info.endTimeStr}}
+				</block>
 			</view>
 		</view>
 		<view class="input_cell_row is_link" wx:if="{{!info.hideAddr && info.address.longAddress}}" bindtap="seeMap">
@@ -320,7 +322,7 @@
 			</view>
 		</view>
 	</view>
-	
+
 	<view class="cover_view" wx:if="{{showEventLink}}" bindtap="showEventLinkChange">
 		<view class="show_qr_code_frame" catchtap="doAnything">
 			<view class="show_qr_code_image">
