--- a/pages/activities/sign-up/sign-up.wxml
+++ b/pages/activities/sign-up/sign-up.wxml
@@ -78,13 +78,24 @@
 					</view>
 				</view>
 				<view class="input_cell_row is_link" wx:if="{{item.type === 'radio'}}">
-					<view class="label">
-						<view class="require" wx:if="{{item.required === 1}}">*</view>
-						{{item.text}}
-					</view>
-					<view class="form_item">
-						<picker range="{{item.options}}" range-key="value" data-index="{{index}}" bindchange="selectOnChange">{{item.select ? item.options[item.select].value : '请选择'}}</picker>
-					</view>
+					<block wx:if="{{item.name === 'sex'}}">
+						<view class="label">
+							<view class="require" wx:if="{{item.required === 1}}">*</view>
+							{{item.text}}
+						</view>
+						<view class="form_item">
+							<picker range="{{item.options}}" range-key="name" data-index="{{index}}" bindchange="selectOnChange">{{item.select ? item.options[item.select].name : '请选择'}}</picker>
+						</view>
+					</block>
+					<block wx:else>
+						<view class="label">
+							<view class="require" wx:if="{{item.required === 1}}">*</view>
+							{{item.text}}
+						</view>
+						<view class="form_item">
+							<picker range="{{item.options}}" range-key="value" data-index="{{index}}" bindchange="selectOnChange">{{item.select ? item.options[item.select].value : '请选择'}}</picker>
+						</view>
+					</block>
 				</view>
 				<view class="input_cell_rich_row" wx:if="{{item.type === 'checkbox'}}">
 					<view class="label">
