--- a/pages/management/management/index.wxml
+++ b/pages/management/management/index.wxml
@@ -114,6 +114,9 @@
 			</view>
 		</view>
 	</view>
+	<view class="page_tips" wx:if="hasDeal">
+		该活动有退款或有用户申请取消未处理，请前往APP操作。
+	</view>
 	<view class="manage_btn" bindtap="showCancelChange" wx:if="{{activityInfo.status === 1 || activityInfo.status === 2}}">取消活动</view>
 	<view class="manage_btn disabled" wx:elif="{{activityInfo.status === 4}}">活动已取消</view>
 	<view class="cover_view" wx:if="{{showCancelCover}}">
