--- a/pages/public/pay-page/index.wxss
+++ b/pages/public/pay-page/index.wxss
@@ -31,3 +31,52 @@
   line-height: 30rpx;
   color: #ffa404;
 }
+
+.choose_tips {
+  line-height: 50rpx;
+  font-size: 20rpx;
+  color: #999999;
+  padding: 0 20rpx;
+  height: 50rpx;
+  margin-top: -20rpx
+}
+
+.way_row {
+  padding: 20rpx;
+  border-bottom: solid 1rpx #e5e5e5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.block .way_row:last-child {
+  border-bottom: none;
+}
+
+.way_icon {
+  width: 64rpx;
+  height: 64rpx;
+}
+
+.way_content {
+  flex-grow: 1;
+  margin-left: 20rpx;
+  font-size: 28rpx;
+  color: #333333;
+}
+
+.way_control {
+  width: 50rpx;
+  height: 50rpx;
+}
+
+.pay_btn {
+  width: 690rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+  font-size: 32rpx;
+  color: #ffffff;
+  margin: 80rpx auto;
+  background-color: #ffa404;
+  text-align: center;
+}
