--- a/pages/public/pay-page/index.wxml
+++ b/pages/public/pay-page/index.wxml
@@ -45,9 +45,52 @@
 
 <view class="agreement_tips">
 	<checkbox-group bindchange="agreementOnClick">
-		<checkbox color="#ffa404" value="true" size="14" />
+		<checkbox color="#ffa404" value="true" size="14" checked="{{agree}}" />
 	</checkbox-group>
 	<view class="text">
-    同意 <view class="agreement" catchtap="showAgreement">《报名吧协议》</view>
-  </view>
+		同意 <view class="agreement" catchtap="showAgreement">《报名吧协议》</view>
+	</view>
+</view>
+
+<view class="cover_bg" wx:if="{{agreementShow}}">
+	<view class="agreement_modal">
+		<view class="agreement_modal_title">
+			报名吧协议
+		</view>
+		<view class="agreement_modal_content">
+			<view class="content_text">
+				<view class="strong">“报名吧”支付服务系由杭州求道网络科技有限公司（以下简称“本公司”）向“报名吧”用户提供的“报名吧”平台上的各项活动支付服务（以下简称“本服务”）。本协议由您与本公司通过互联网在线形式签订，当您选择【同意】后，本协议内容对您及本公司均具有法律约束力。</view>
+			</view>
+			<view class="content_text">
+				<view class="strong">
+					<view>重要内容提示：</view>
+					<view>在您使用“报名吧”支付服务之前，您应当仔细阅读并遵守本协议以及本公司依托“报名吧”平台现在及将来发布的新增/变更支付功能的有关协议或规则等。本公司在此特别提示您审慎阅读（未成年人必须在监护人陪同下阅读）并充分理解本协议的各条款内容，特别是限制或免除本公司的责任、限制或约束您的权利、及声明与承诺、法律适用、争议解决方式等有关条款。在您充分理解本协议条款内容的基础上，请慎重选择是否接受本协议的条款内容。如您一经使用“报名吧”支付服务，则本公司将视您已充分理解并完全接受本协议条款内容；如您选择不接受本协议条款内容，则您将无权使用“报名吧”支付服务。</view>
+				</view>
+			</view>
+			<view class="content_title">声明与承诺</view>
+			<view class="content_text">
+				<view>1.1  您郑重声明，在注册成为“报名吧”用户并接受本服务之前，您已充分阅读、理解并接受本协议的全部条款内容；您使用本服务的行为，将直接视为您同意遵循本协议的全部条款内容，本协议内容对您具有法律约束力。</view>
+				<view>1.2  您郑重声明，在您同意接受本协议条款内容并使用本服务时，您是具备中华人民共和国法律规定的完全民事权利能力和民事行为能力，能够独立承担民事责任的自然人、法人或其他组织，特别是具备组织、承办、参与“报名吧”平台各项活动的合法资质；同时，您保证您在使用本服务时所支付的货币资金来源合法，属于您的合法所得或合法持有的货币资产。</view>
+				<view>如您使用本服务时不在中华人民币共和国大陆地区，则本协议内容不应受您所属国家或地区的排斥。如您在使用本服务时不具备上述服务用户条件的，您应立即停止使用本服务。</view>
+				<view>1.3  您郑重承诺，本公司有权随时对本协议任一条款或内容进行单方面的变更及更新，并在“报名吧”平台予以公布或通知即为生效，本公司无需另行以书面或电子文件形式告知您；若您在本协议任一条款或内容变更（或更新）公布（或通知）后继续使用本服务的，将视为您已充分阅读、理解并接受变更（或更新）后的协议条款或内容，变更（或更新）后的协议条款或内容对您具有法律约束力，您应诚信履约；如您不同意变更（或更新）后的协议内容，您应立即停止使用本服务。</view>
+			</view>
+			<view class="content_title">“报名吧”支付服务的内容</view>
+			<view class="content_text">
+				<view>2.1  本协议所称“报名吧”系本公司自主开发并拥有独立知识产权的互联网服务产品，“报名吧”平台包括报名吧APP软件、报名吧微信公众号、报名吧网站www.51bmb.com以及本公司后续开发的其他系列产品。</view>
+				<view> “报名吧”支付服务系报名吧产品的服务功能之一，在您注册成为“报名吧”用户并接受本协议内容后，您可以在“报名吧”平台上通过使用本服务（通过第三方支付工具）向您报名参加相关活动的组织方、主办方、承办方或其他指定的活动费用收款方（以下合称“活动收款方”）支付相应的活动费用。</view>
+				<view>2.2  在您使用本服务前，您需通过“报名吧”注册登记并获得“报名吧”账户。该“报名吧”账户系本公司向您提供的唯一身份识别代码，您可以通过“报名吧”软件自行设置密码并登陆成为“报名吧”正式用户，使用“报名吧”的支付服务功能，该“报名吧”账户将用以查询、记录、统计您的活动费用交易数据以及账户可支付余额等内容。</view>
+				<view>2.3  支付功能服务：您可以要求本公司将您的款项支付给您指定的活动收款方。您授权并同意，活动款项支付完毕后，非经法律程序的允许，该支付行为是不可撤销或撤回的。</view>
+				<view>您的“报名吧”账户在登录状态下发出的支付指令均视为您本人发出的支付指令，您发出的支付指令一旦发出将不可撤销，本公司有权根据您发出的指令进行支付操作。</view>
+				<view>2.4  支付款项的退还：本公司仅接受您的委托将活动费用支付给活动收款方；无论主观或客观原因，如您要求活动收款方退还全部或部分已支付活动费用的，您需直接与活动收款方取得联系并友好协商处理，本公司不接受任何退款委托事项，亦对活动收款方的退款事宜不承担任何义务。</view>
+				<view>2.5  支付款项的保管：对您支付到本公司并归属至您账户内的款项，本公司将予以妥善保管，除本协议另行规定外，不作任何其他非您指示的操作。</view>
+				<view>2.6  支付款项的查询：本公司将对您在本服务中的所有操作进行记录，不论该操作之目的最终是否实现。您理解并同意您支付款项的记录服务是由您提供的第三方支付工具账户或银行账户对应的交易数据提供的，您需向该第三方支付工具或银行请求查询。</view>
+				<view>2.7  您郑重声明并承诺，在您使用“报名吧”支付服务时，您完全知悉并理解支付活动费用涉及的一切或有风险，包括但不限于“报名吧”平台上活动组织方、主办方、承办方或活动收款方的真实性与合法性，活动内容的真实性与合法性，承诺活动参与者的真实性与合法性，“报名吧”平台活动信息与实际活动内容的差异性以及其他与您作出付款意思表示相违背的情形。在遇到上述风险时，您确认该等风险均由您自行承担，亦或依法追究活动组织方、主办方、承办方或活动收款方的法律责任，但上述风险均与本公司无关，您保证不以任何理由、任何方式要求本公司退款或承担任何法律责任；否则，您同意将给予本公司赔款等额的经济补偿。</view>
+			</view>
+			<view class="content_title">“报名吧”支付服务的内容</view>
+			<view class="content_text">
+				
+			</view>
+		</view>
+		<view class="agreement_modal_btn" bindtap="readAndAgree">我已阅读并同意</view>
+	</view>
 </view>
