报名支付转到支付页面

--- a/pages/public/pay-page/index.wxml
+++ b/pages/public/pay-page/index.wxml
@@ -67,28 +67,79 @@
 					<view>在您使用“报名吧”支付服务之前，您应当仔细阅读并遵守本协议以及本公司依托“报名吧”平台现在及将来发布的新增/变更支付功能的有关协议或规则等。本公司在此特别提示您审慎阅读（未成年人必须在监护人陪同下阅读）并充分理解本协议的各条款内容，特别是限制或免除本公司的责任、限制或约束您的权利、及声明与承诺、法律适用、争议解决方式等有关条款。在您充分理解本协议条款内容的基础上，请慎重选择是否接受本协议的条款内容。如您一经使用“报名吧”支付服务，则本公司将视您已充分理解并完全接受本协议条款内容；如您选择不接受本协议条款内容，则您将无权使用“报名吧”支付服务。</view>
 				</view>
 			</view>
-			<view class="content_title">声明与承诺</view>
+			<view class="content_title">第一条 声明与承诺</view>
 			<view class="content_text">
-				<view>1.1  您郑重声明，在注册成为“报名吧”用户并接受本服务之前，您已充分阅读、理解并接受本协议的全部条款内容；您使用本服务的行为，将直接视为您同意遵循本协议的全部条款内容，本协议内容对您具有法律约束力。</view>
-				<view>1.2  您郑重声明，在您同意接受本协议条款内容并使用本服务时，您是具备中华人民共和国法律规定的完全民事权利能力和民事行为能力，能够独立承担民事责任的自然人、法人或其他组织，特别是具备组织、承办、参与“报名吧”平台各项活动的合法资质；同时，您保证您在使用本服务时所支付的货币资金来源合法，属于您的合法所得或合法持有的货币资产。</view>
+				<view>1.1 您郑重声明，在注册成为“报名吧”用户并接受本服务之前，您已充分阅读、理解并接受本协议的全部条款内容；您使用本服务的行为，将直接视为您同意遵循本协议的全部条款内容，本协议内容对您具有法律约束力。</view>
+				<view>1.2 您郑重声明，在您同意接受本协议条款内容并使用本服务时，您是具备中华人民共和国法律规定的完全民事权利能力和民事行为能力，能够独立承担民事责任的自然人、法人或其他组织，特别是具备组织、承办、参与“报名吧”平台各项活动的合法资质；同时，您保证您在使用本服务时所支付的货币资金来源合法，属于您的合法所得或合法持有的货币资产。</view>
 				<view>如您使用本服务时不在中华人民币共和国大陆地区，则本协议内容不应受您所属国家或地区的排斥。如您在使用本服务时不具备上述服务用户条件的，您应立即停止使用本服务。</view>
-				<view>1.3  您郑重承诺，本公司有权随时对本协议任一条款或内容进行单方面的变更及更新，并在“报名吧”平台予以公布或通知即为生效，本公司无需另行以书面或电子文件形式告知您；若您在本协议任一条款或内容变更（或更新）公布（或通知）后继续使用本服务的，将视为您已充分阅读、理解并接受变更（或更新）后的协议条款或内容，变更（或更新）后的协议条款或内容对您具有法律约束力，您应诚信履约；如您不同意变更（或更新）后的协议内容，您应立即停止使用本服务。</view>
+				<view>1.3 您郑重承诺，本公司有权随时对本协议任一条款或内容进行单方面的变更及更新，并在“报名吧”平台予以公布或通知即为生效，本公司无需另行以书面或电子文件形式告知您；若您在本协议任一条款或内容变更（或更新）公布（或通知）后继续使用本服务的，将视为您已充分阅读、理解并接受变更（或更新）后的协议条款或内容，变更（或更新）后的协议条款或内容对您具有法律约束力，您应诚信履约；如您不同意变更（或更新）后的协议内容，您应立即停止使用本服务。</view>
 			</view>
-			<view class="content_title">“报名吧”支付服务的内容</view>
+			<view class="content_title">第二条 “报名吧”支付服务的内容</view>
 			<view class="content_text">
-				<view>2.1  本协议所称“报名吧”系本公司自主开发并拥有独立知识产权的互联网服务产品，“报名吧”平台包括报名吧APP软件、报名吧微信公众号、报名吧网站www.51bmb.com以及本公司后续开发的其他系列产品。</view>
+				<view>2.1 本协议所称“报名吧”系本公司自主开发并拥有独立知识产权的互联网服务产品，“报名吧”平台包括报名吧APP软件、报名吧微信公众号、报名吧网站www.51bmb.com以及本公司后续开发的其他系列产品。</view>
 				<view> “报名吧”支付服务系报名吧产品的服务功能之一，在您注册成为“报名吧”用户并接受本协议内容后，您可以在“报名吧”平台上通过使用本服务（通过第三方支付工具）向您报名参加相关活动的组织方、主办方、承办方或其他指定的活动费用收款方（以下合称“活动收款方”）支付相应的活动费用。</view>
-				<view>2.2  在您使用本服务前，您需通过“报名吧”注册登记并获得“报名吧”账户。该“报名吧”账户系本公司向您提供的唯一身份识别代码，您可以通过“报名吧”软件自行设置密码并登陆成为“报名吧”正式用户，使用“报名吧”的支付服务功能，该“报名吧”账户将用以查询、记录、统计您的活动费用交易数据以及账户可支付余额等内容。</view>
-				<view>2.3  支付功能服务：您可以要求本公司将您的款项支付给您指定的活动收款方。您授权并同意，活动款项支付完毕后，非经法律程序的允许，该支付行为是不可撤销或撤回的。</view>
+				<view>2.2 在您使用本服务前，您需通过“报名吧”注册登记并获得“报名吧”账户。该“报名吧”账户系本公司向您提供的唯一身份识别代码，您可以通过“报名吧”软件自行设置密码并登陆成为“报名吧”正式用户，使用“报名吧”的支付服务功能，该“报名吧”账户将用以查询、记录、统计您的活动费用交易数据以及账户可支付余额等内容。</view>
+				<view>2.3 支付功能服务：您可以要求本公司将您的款项支付给您指定的活动收款方。您授权并同意，活动款项支付完毕后，非经法律程序的允许，该支付行为是不可撤销或撤回的。</view>
 				<view>您的“报名吧”账户在登录状态下发出的支付指令均视为您本人发出的支付指令，您发出的支付指令一旦发出将不可撤销，本公司有权根据您发出的指令进行支付操作。</view>
-				<view>2.4  支付款项的退还：本公司仅接受您的委托将活动费用支付给活动收款方；无论主观或客观原因，如您要求活动收款方退还全部或部分已支付活动费用的，您需直接与活动收款方取得联系并友好协商处理，本公司不接受任何退款委托事项，亦对活动收款方的退款事宜不承担任何义务。</view>
-				<view>2.5  支付款项的保管：对您支付到本公司并归属至您账户内的款项，本公司将予以妥善保管，除本协议另行规定外，不作任何其他非您指示的操作。</view>
-				<view>2.6  支付款项的查询：本公司将对您在本服务中的所有操作进行记录，不论该操作之目的最终是否实现。您理解并同意您支付款项的记录服务是由您提供的第三方支付工具账户或银行账户对应的交易数据提供的，您需向该第三方支付工具或银行请求查询。</view>
-				<view>2.7  您郑重声明并承诺，在您使用“报名吧”支付服务时，您完全知悉并理解支付活动费用涉及的一切或有风险，包括但不限于“报名吧”平台上活动组织方、主办方、承办方或活动收款方的真实性与合法性，活动内容的真实性与合法性，承诺活动参与者的真实性与合法性，“报名吧”平台活动信息与实际活动内容的差异性以及其他与您作出付款意思表示相违背的情形。在遇到上述风险时，您确认该等风险均由您自行承担，亦或依法追究活动组织方、主办方、承办方或活动收款方的法律责任，但上述风险均与本公司无关，您保证不以任何理由、任何方式要求本公司退款或承担任何法律责任；否则，您同意将给予本公司赔款等额的经济补偿。</view>
+				<view>2.4 支付款项的退还：本公司仅接受您的委托将活动费用支付给活动收款方；无论主观或客观原因，如您要求活动收款方退还全部或部分已支付活动费用的，您需直接与活动收款方取得联系并友好协商处理，本公司不接受任何退款委托事项，亦对活动收款方的退款事宜不承担任何义务。</view>
+				<view>2.5 支付款项的保管：对您支付到本公司并归属至您账户内的款项，本公司将予以妥善保管，除本协议另行规定外，不作任何其他非您指示的操作。</view>
+				<view>2.6 支付款项的查询：本公司将对您在本服务中的所有操作进行记录，不论该操作之目的最终是否实现。您理解并同意您支付款项的记录服务是由您提供的第三方支付工具账户或银行账户对应的交易数据提供的，您需向该第三方支付工具或银行请求查询。</view>
+				<view>2.7 您郑重声明并承诺，在您使用“报名吧”支付服务时，您完全知悉并理解支付活动费用涉及的一切或有风险，包括但不限于“报名吧”平台上活动组织方、主办方、承办方或活动收款方的真实性与合法性，活动内容的真实性与合法性，承诺活动参与者的真实性与合法性，“报名吧”平台活动信息与实际活动内容的差异性以及其他与您作出付款意思表示相违背的情形。在遇到上述风险时，您确认该等风险均由您自行承担，亦或依法追究活动组织方、主办方、承办方或活动收款方的法律责任，但上述风险均与本公司无关，您保证不以任何理由、任何方式要求本公司退款或承担任何法律责任；否则，您同意将给予本公司赔款等额的经济补偿。</view>
 			</view>
-			<view class="content_title">“报名吧”支付服务的内容</view>
+			<view class="content_title">第三条 “报名吧”支付服务的范围及责任</view>
 			<view class="content_text">
-				
+				<view>3.1 您在使用“报名吧”支付服务时，应遵守中华人民共和国相关法律、行政法规及其他规范性文件的规定，以及您所在国家或地区之法令、相关国际惯例的规定，您承诺不为任何非法目的或以任何非法方式使用本服务，也不将本服务用于禁止或限制物品及活动的交易行为。</view>
+				<view class="strong">3.2 您不得利用本服务实施下列任一的行为：</view>
+				<view>（1） 反对宪法所确定的基本原则，危害国家安全、泄漏国家秘密、颠覆国家政权、破坏国家统一；</view>
+				<view>（2） 侵害他人名誉、隐私权、商业秘密、商标权、著作权、专利权及其他权利；</view>
+				<view>（3） 冒用他人名义使用本服务；</view>
+				<view>（4） 从事任何不法交易行为，如贩卖枪支、毒品、禁药、盗版软件、黄色淫秽物品或其他违禁物；</view>
+				<view>（5） 提供赌博资讯或以任何方式引诱他人参与赌博；</view>
+				<view>（6） 涉嫌实施或实施洗钱、套现或进行传销活动；</view>
+				<view>（7） 使用无效信用卡或他人信用卡进行交易；</view>
+				<view>（8） 使用无效银行账户或他人银行账户进行交易；</view>
+				<view>（9）进行与您或交易对方宣称的交易内容不符的交易，或不真实的交易；</view>
+				<view>（10）从事任何可能含有电脑病毒或是可能侵害本服务系统、资料之行为；</view>
+				<view>（11） 违反法律法规、监管规定、本公司或其关联公司网站的条款、协议、规则、通告等相关规定，而被上述任一主体终止提供服务；</view>
+				<view>（12） 从事其他违反国家法律、法规、规章及政策法令的行为，或其他违反本协议的行为；</view>
+				<view>（13）违反依法定或约定之保密义务。</view>
+				<view>（14）其他本公司有正当理由认为不适当之行为。</view>
+				<view class="strong">如您存有上述情形之一，亦或有其他侵害本公司合法权益之行为的，本公司有权立即终止提供本服务，且您应承担所有相关法律责任，因此导致本公司或本公司雇员受损的，您应承担赔偿责任。</view>
+				<view>3.3 您在使用本服务过程中应当遵守当地相关的法律法规，并尊重当地的道德和风俗习惯。如果您的行为违反了当地法律法规或道德风俗，您应当为此独立承担责任，与本公司无关。</view>
+				<view>3.4 如您所属的国家或地区禁止或限制本协议内容的全部或部分，则您应立即停止使用本服务。</view>
+				<view>3.5  您应避免因使用本服务而使本公司卷入政治和公共事件，否则本公司有权暂停或终止对您的服务。</view>
+			</view>
+			<view class="content_title">第四条 本公司的责任范围</view>
+			<view class="content_text">
+				<view>4.1 本公司仅对本协议中所列明的义务承担相应的法律责任。</view>
+				<view>4.2   本公司仅提供本支付服务，并不实际参与具体的商品、服务或活动费用交易。因此，在您使用本服务时，因活动及活动费用本身所产生的任何纠纷或责任应由您自行解决或承担，与本公司无关。</view>
+				<view>4.3  “报名吧”用户信息是由用户本人自行提供的，本公司无法保证该信息之准确、及时和完整，您应对您的判断承担全部责任。</view>
+				<view>4.4 本服务是在现有技术水平下提供的，本公司将尽力为您提供服务，但无法保证该服务符合您的需求，或该服务完全符合您的预期。</view>
+			</view>
+			<view class="content_title">第五条 不可抗力及免责事由</view>
+			<view class="content_text">
+				<view>5.1  在您使用本服务的过程中，有可能会遭遇不可抗力等风险因素，使本公司不得不中断向您提供本服务。不可抗力是指不能预见、不能克服、不能避免且对一方或双方造成重大影响的客观事件，包括但不限于洪水、地震、瘟疫和风暴等自然灾害以及战争、动乱、政府行为等社会事件。出现上述不可抗力情形时，本公司将尽最大努力及时与相关单位配合及时进行修复，但由此给您造成的损失本公司应予免责。</view>
+				<view>5.2   在法律允许的范围内，本公司对以下情形导致的服务中断或受阻不承担责任：</view>
+				<view>（1） 受到计算机病毒、木马或其他恶意程序、黑客攻击的入侵；</view>
+				<view>（2） 您或本公司的电脑软件、系统、硬件和通信线路出现故障或错误；</view>
+				<view>（3） 您操作不当；</view>
+				<view>（4） 您通过非本公司授权的方式使用本服务；</view>
+				<view>（5） 银行系统或银行网络出现故障；</view>
+				<view>（6） 其他本公司无法控制或预见的情形。</view>
+				<view>5.3  您在使用本服务的过程中，本公司不对下列风险担责：</view>
+				<view>（1） 来自他人匿名或冒名的含有威胁、诽谤、令人反感或非法内容的信息；</view>
+				<view>（2） 遭受他人误导、欺骗或其他导致任何心理、生理上的伤害以及经济上的损失；</view>
+				<view>（3） 其他因网络信息或您行为引起的风险。</view>
+				<view>5.4  本公司有权基于业务调整、系统升级或风险管控的需要，单方不经通知地暂停、中断或终止向您提供本服务。</view>
+				<view>5.5  本公司有权依据中华人民共和国相关法律规定对您的活动支付交易进行风险管控。本公司有权基于单方判断，认为您有可疑交易或有违反法律规定或本协议约定之情形时，本公司有权不经通知，先行暂停、中断或终止向您提供本服务，并拒绝您使用本服务之部分或全部功能，亦可以暂停、中断或终止向您提供“报名吧”软件的部分或全部功能。</view>
+				<view>5.6   本公司发现您违反本协议或附属协议任一条款的，有权单方终止或解除本协议，暂停、中断或终止向您提供本服务。</view>
+				<view>5.7  在任何情况下，本公司对本协议所承担的违约赔偿责任总额不超过向您收取的当次服务费用总额（如有）；如本公司持续无偿提供本服务的，违约赔偿责任总额为零。</view>
+			</view>
+			<view class="content_title">第六条 法律适用及争议解决</view>
+			<view class="content_text">
+				<view>6.1  本协议的成立、生效、履行、解释及纠纷解决，适用中华人民共和国大陆地区法律。</view>
+				<view>6.2  本协议签订地为中华人民共和国浙江省杭州市西湖区。</view>
+				<view>6.3  您和本公司因本协议产生任何纠纷或争议的，首先应友好协商解决；协商不成的，任意一方同意将纠纷或争议提交至本协议签订地（即为杭州市西湖区）有管辖权的人民法院诉讼解决。</view>
 			</view>
 		</view>
 		<view class="agreement_modal_btn" bindtap="readAndAgree">我已阅读并同意</view>
