--- a/pages/activities/activity-details/index.wxml
+++ b/pages/activities/activity-details/index.wxml
@@ -203,7 +203,7 @@
 			<!-- 显示两个按钮 -->
 			<!-- 第二个按钮 -->
 			<view class="pay_btn" wx:if="{{pageLogic.showVoucher}}" bindtap="AjaxGetJoinCode">报名凭证</view>
-			<view class="pay_btn" wx:elif="{{pageLogic.isPayPending}}" bindtap="AjaxGetPreOrder">立即支付</view>
+			<view class="pay_btn" wx:elif="{{pageLogic.isPayPending}}" bindtap="payForJoin">立即支付</view>
 			<!-- 第一个按钮 -->
 			<block wx:if="{{pageLogic.isArticle}}">
 				<view class="cancel_btn" wx:if="{{pageLogic.isFollowed}}">
