--- a/pages/model/seniorSetting/index.wxml
+++ b/pages/model/seniorSetting/index.wxml
@@ -1,13 +1,13 @@
 <!--pages/model/seniorSetting/index.wxml-->
 <view class="senior_setting">
     <view class="input_cell">
-    <navigator url="../change-time/index?key=signUpStartTime&showTime=false&timeStap={{activity.signUpStartTime}}" class="input_cell_row">
+    <navigator url="../change-time/index?key=signUpStartTime&showTime=false&timeStap={{activity.signUpStartTime}}&endTime={{activity.beginTime}}" class="input_cell_row">
       <view class="label">报名开始时间</view>
       <view class="form_item">
         {{activity.signUpStartTimeStr === '1970-01-01 08:00' ? '' : activity.signUpStartTimeStr}}
       </view>
     </navigator>
-    <navigator url="../change-time/index?key=expireTime&showTime=false&timeStap={{activity.expireTime}}" class="input_cell_row">
+    <navigator url="../change-time/index?key=expireTime&showTime=false&timeStap={{activity.expireTime}}&endTime={{activity.beginTime}}" class="input_cell_row">
       <view class="label">报名截止时间</view>
       <view class="form_item">
         {{activity.expireTimeStr === '1970-01-01 08:00' ? '' : activity.expireTimeStr}}
