--- a/pages/user/user/index.wxml
+++ b/pages/user/user/index.wxml
@@ -25,7 +25,7 @@
               未认证
             </view>
           </view>
-          <view class="phoneNum">{{userInfo.telephone}}</view>
+          <view class="phoneNum">{{userInfo.telephone || ''}}</view>
         </view>
       </navigator>
     </block>
